--- a/Memories.html
+++ b/Memories.html
@@ -202,23 +202,23 @@
         过去的所有终将成为一段美好的回忆，站在未来里希望我们彼此都能有一个美好的前程，为心中的理想全力以赴，做自己认为对的事情，既然选择了远方便只顾风雨兼程吧，我一直觉得我始终差了点运气，但是尽人事，听天命，结果一定不会太差的！
       </p>
       <p>
-        不知道写些什么了，真的是后悔没学好语文哈哈哈，那就祝我们友谊长存，天天开心，但是世事难料的，未来是很难预测的，每个人都只能在你的生命里陪伴你一段时光，当然我希望这段时光尽量久一些吧。
+        不知道写些什么了，真的是后悔没学好语文哈哈哈，那就祝我们友谊长存，天天开心，但是世事难料的，未来是很难预测的，每个人都只能在你的生命里陪伴你一段时光，当然我希望这段时光尽量久一些吧，这样遗憾就会少一些。
       </p>
       <p>
         但是如果不给自己的挚友留下一些什么真的会很遗憾不是吗，想想那些小时候玩的很好但是现在已然不联系的朋友，甚至连见一面都很难了。
-        但是在时间的长河里好像就是这样，从古至今，也遵循这些规律不是吗。
+        然而在时间的长河里好像就是这样，从古至今，也遵循这些规律不是吗。
       </p>
       <p>
-        未来我们彼此都会成家立业，忙碌于自己的人生，所以我更希望在我们彼此不联系的日子里各自努力，攀登自己心中的高峰。虽然说相见时难别亦难，然而人生又何处不相逢呢？说不定我们在山顶又能遇见，那时候再回忆我们20岁的，
+        未来我们彼此都会成家立业，忙碌于自己的人生，所以我更希望在我们彼此不联系的日子里各自努力，攀登自己心中的高峰。虽然说相见时难别亦难，而人生又何处不相逢呢？说不定我们在山顶又能遇见，那时候再回忆我们20岁的时光，
       </p>
       <p>
-        我想一定是十分怀念的。未来的某年某月某天，说不定我已经将这个网站遗忘，甚至记不起密码，而你恰好打开尘封的回忆，你就给我发个消息让我来猜重温这一份美好的回忆……
+        我想一定是十分怀念的。未来的某年某月某天，说不定我已经将这个网站遗忘，甚至记不起密码，而你恰好打开尘封的回忆，你就给我发个消息重温这一份美好的回忆……
       </p>
       <p>
-        背景音乐，是我这段时间非常喜欢听的歌郑润泽的《瞬》，有一句歌词“说过要一起看的海，如今我独自等待”。而评论区的热评是：一定会见，就在某天！
+        背景音乐，是我这段时间非常喜欢听的歌郑润泽的《瞬》，有一句歌词“说过要一起看的海，现在我独自等待”。而评论区的热评是：一定会见，就在某天！生活的意义呢，本身就是由很多个瞬间组成的嘛。彼此之间有了许多个瞬间也就组成了回忆。
       </p>
       <p>
-        最后的最后呢，许个愿吧，希望我们都能有一份自己热爱的事业，收到自己心仪的学校或者工作岗位的offer，遇到属于自己真正的幸福。山高路远，看世界也找自己！
+        最后的最后呢，许个愿吧，希望我们都能有一份自己热爱的事业，收到自己心仪的学校或者工作岗位的offer，遇到属于自己真正的幸福。你一定能够成为你想要成为的人，山高路远，看世界也找自己！
       </p>
       <p>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
